--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/bdurb/weather-app#readme",
   "dependencies": {
-    "reqeust": "^2.81.1"
+    "request": "^2.87.0"
   }
 }
